# EOLkits

./: .gitignore  .pre-commit-hooks.yaml  AGENTS.md  AUTOPSY-AND-14-DAY-REVENUE-PLAN.md  BENCHMARK.md  CONTRIBUTING.md  HANDOFF-2026-06-23.md  HANDOFF-2026-07-15.md  HANDOFF.md  LICENSE  PROFIT-PROJECTIONS.md  README.md  REVENUE-SPRINT-2026-07-22.md  RULES.md  SECURITY.md  SEO-GRACE-HANDOFF.md  action.yml  pricing.yml
.github/workflows/: benchmark.yml  blog-loop.yml  deploy-pages.yml  determinism.yml  ics.yml  mutation.yml  property.yml  publish-vscode.yml  release.yml  search-console.yml  seo-pages.yml  status-synth.yml  test.yml
apps/github-action/: README.md  action.yml  run.sh
apps/github-app/: README.md  manifest.json  permissions.md
apps/grace-api/: Dockerfile  README.md  conftest.py  requirements.txt
apps/pre-commit/: hooks.yaml
apps/runner/: Dockerfile  audit_pdf.py  main.py  migration_pr.py  requirements.txt
apps/web/: build.py  (+2 more)
docs/: deprecations.ics  feed.xml  index.html  llms.txt  robots.txt  sitemap.xml  style.css  track.js  widget.js
feed/: publish.py  verify.py
kits/al2023-gate/: LICENSE  README.md  pyproject.toml
kits/al2023-gate/src/al2023_gate/: packer.py
launch/: DISTRIBUTION-KIT.md  FIRE-BATCH.md  LAUNCH-NOW-2026-07-22.md  PUBLISH-CHECKLIST.md  REPO-RENAMED.md  blog-post.md  hn-replies.md  launched.txt  outreach.md  reddit.md  show-hn-final.md  social.md  thread-answers.md
legal/: dpa.md  privacy.md  terms.md
research/: phase1_findings.md
revenue/: ASSETS.md  DECISIONS.md  HUMAN_QUEUE.md  METRICS.md  OPPORTUNITIES.md  PLAN.md
(+177 files in other folders)
