[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "al2023-gate"
version = "1.0.0"
description = "Amazon Linux 2 → AL2023 migration kit. Scan AMIs, remap packages (yum→dnf), diff cloud-init, patch Ansible playbooks, generate Packer templates, and swap ECS/EKS AMIs off Amazon Linux 2 (end-of-life 2026-06-30, now unpatched)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "EOLkits" }]
keywords = ["aws", "amazon-linux", "al2", "al2023", "migration", "eol", "packer", "ansible", "ec2", "eks"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Systems Administration",
]
dependencies = []

[project.optional-dependencies]
aws = ["boto3>=1.28.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.1.0"]

[project.scripts]
al2023-gate = "al2023_gate.cli:main"

[project.urls]
Homepage = "https://eolkits.com"
Repository = "https://github.com/ntoledo319/EOLkits"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mutmut]
paths_to_mutate = "src/al2023_gate/"
tests_dir = "test/"
runner = "python -m pytest -x -q --no-header"

